crates/aenv-core/tests/snapshots/json_snapshots__adapter_entry_json_via_builder.snap
---
source: crates/aenv-core/tests/json_snapshots.rs
assertion_line: 326
expression: entry
---
{
  "name": "claude-code",
  "files": [
    "CLAUDE.md",
    ".claude/"
  ],
  "skills_dir": ".claude/skills",
  "parameters": [
    {
      "name": "instructions_budget",
      "type": "integer"
    }
  ],
  "soft_limits": {
    "instructions": 5000
  }
}
