crates/aenv-core/tests/snapshots/json_snapshots__drift_report_shape_is_stable.snap
---
source: crates/aenv-core/tests/json_snapshots.rs
assertion_line: 158
expression: r
---
{
  "project": "/proj",
  "active_namespace": "leaf",
  "drifted": [
    {
      "path": "CLAUDE.md",
      "qualified_name": "leaf::CLAUDE.md",
      "kind": "symlink-replaced",
      "summary": "420 bytes on disk vs 380 bytes expected"
    }
  ]
}
