crates/aenv-core/tests/snapshots/json_snapshots__drift_report_via_builder.snap
---
source: crates/aenv-core/tests/json_snapshots.rs
assertion_line: 419
expression: report
---
{
  "project": "[PROJECT_ROOT]",
  "active_namespace": "leaf",
  "drifted": []
}
