crates/aenv-core/tests/snapshots/json_snapshots__get_report_shape_is_stable.snap
---
source: crates/aenv-core/tests/json_snapshots.rs
assertion_line: 121
expression: r
---
{
  "parameter": "default_model",
  "value": "claude-opus-4.7",
  "source_namespace": "leaf",
  "inheritance_chain": [
    {
      "namespace": "base",
      "value": "claude-sonnet-4.6"
    },
    {
      "namespace": "leaf",
      "value": "claude-opus-4.7"
    }
  ]
}
