crates/aenv-core/tests/snapshots/json_snapshots__skill_entry_omits_adapter_when_none.snap
---
source: crates/aenv-core/tests/json_snapshots.rs
assertion_line: 200
expression: e
---
{
  "namespace": "leaf",
  "qualified_name": "leaf::stub",
  "short_name": "stub",
  "mode": "authored",
  "required": false
}
