crates/aenv-core/tests/snapshots/json_snapshots__skill_entry_shape_is_stable.snap
---
source: crates/aenv-core/tests/json_snapshots.rs
assertion_line: 84
expression: e
---
{
  "namespace": "leaf",
  "qualified_name": "leaf::write-tests",
  "short_name": "write-tests",
  "adapter": "claude-code",
  "mode": "imported",
  "source": "git+https://example.com/skills.git#write-tests",
  "pin": "v1.2.0",
  "required": true
}
